# simple-web-crawler

./: README.md  pyproject.toml  simplewebcrawler.py
tests/: performance_tests.py  test_simplewebcrawler.py
